<resources>
    <string name="app_name">A simple game</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="action_sign_in">SIGN UP</string>
    <string name="prompt_ID">ID</string>
    <string name="prompt_name">NAME</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="welcome_message">WELCOME!</string>
    <string name="action_submit">SUBMIT</string>
    <string name ="action_listen">LISTEN</string>
    <string name="NULL_MESSAGE">빈칸을 채워 모두 주세요</string>
    <string name="NOT_MATCH_MESSAGE">아이디 또는 패스워드가 올바르지 않습니다.</string>
    <string name="next">NEXT</string>
    <string name="setting_back">배경음악</string>
    <string name="setting_effect">효과음</string>
    <string name="setting_life">목숨모드</string>
    <string name="setting_inif">무한모드</string>
    <string name="voice_example">여기에 음성이 표시됩니다!</string>
    <string name="appbar_scrolling_view_behavior" />
<!--    <string name="color_lightCoral">#E77471</string>-->
<!--    <string name="color_rubyRed">#F62217</string>-->
<!--    <string name="color_babyBlue">#ABCEDF</string>-->
<!--    <string name="color_valentineRed">#E55451</string>-->
<!--    <string name="color_1">#FCF5EF</string>-->
<!--    <string name="color_2">#FEA735</string>-->
<!--    <string name="color_3">#FE7235</string>-->
<!--    <string name="color_4">#00C3FF</string>-->
<!--    <string name="color_5">#0077FF</string>-->
<!--    <string name="white">#FFFFFF</string>-->
</resources>
